--- a/week8 part 1/index.html
+++ b/week8 part 1/index.html
@@ -25,8 +25,16 @@
       	<input type="text" name="longtext" id="longtext" value=""  />
       	<label for="lattext">Latitude:</label>
       	<input type="text" name="lattext" id="lattext" value=""  />
+        <label for="alttext">Altitude:</label>
+      	<input type="text" name="alttext" id="alttext" value=""  />
       	<label for="time">Time:</label>
       	<input type="text" name="time" id="time" value=""  />
+        <label for="accuracy">Accuracy:</label>
+      	<input type="text" name="accuracy" id="accuracy" value=""  />
+        <label for="compas">Way of travel:</label>
+      	<input type="text" name="compas" id="compas" value=""  />
+        <label for="speedtext">Speed:</label>
+      	<input type="text" name="speedtext" id="speedtext" value=""  />
     </div>
   </div>
 
